添加退出按钮

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CefSharp Example Start Page</title>
+    <title>铁越集团大屏展示</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/app.css" rel="stylesheet" type="text/css" />
@@ -42,11 +42,8 @@
             </div>
         </div>
 
-        <!-- <div>
-            <a href="index.html"> 首页 </a>
-            <a class="back_btn" onclick="javascript:window.history.back();"> 返回 </a>
-
-        </div> -->
+            
+            <a id="exit_btn" class="exit_btn" href="#" > 退出 </a>
 
     </div>
   </div>
