--- a/1_1_tss1.html
+++ b/1_1_tss1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CefSharp Example Start Page</title>
+  <title>酒店疗养-铁越服务</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
@@ -26,7 +26,7 @@
         <div class="half-height" style="    width: 1200px;margin: auto;">
           <div class="width-1-4">
             <a class="image-wrapper" href="tss_1.html">
-              <div class="waik"><img src="./images/tss/bgImg_03.png"></div><p class="title">铁道1896花园酒店</p>
+              <div class=""><img src="./images/tss/fw1_01.jpg"></div><p class="title">铁道1896花园酒店</p>
             </a>
           </div>
           <div class="width-1-4">
