--- a/profile_1.html
+++ b/profile_1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>大连城市物流共同配送中心</title>
+  <title>集团架构-铁越集团</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -37,8 +37,6 @@
             <div style="width:100%;text-align:center">
               <img src="./images/jggimg_03.png" style="width:80%;margin-top:80px;">
             </div>
-
-
           </div>
 
 
@@ -52,7 +50,7 @@
 
           <div class="col-md-9 rightpart" >
             <div class="pull-right">
-              <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+              <a class="back-btn ctl_btn" href="1_profile.html?noaudio=1"> 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
 
             </div>
