--- a/profile_2.html
+++ b/profile_2.html
@@ -56,8 +56,8 @@
 			  </div>
         <div class="col-md-9 rightpart" >
   				<div class="pull-right">
-  				<a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-  				<a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
+            <a class="back-btn ctl_btn" href="1_profile.html?noaudio=1"> 返回 </a>
+  				  <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
   				</div>
 			  </div>
  		  </div>
