--- a/1_1_tss2.html
+++ b/1_1_tss2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CefSharp Example Start Page</title>
+    <title>社会服务-铁越服务</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
@@ -26,40 +26,30 @@
 				<div class="half-height" style="    width: 900px;margin: auto;">
 					<div class="width-1-3">
 					  <a class="image-wrapper" href="tss_9.html">
-					    <div class="waik"><img src="./images/tss/ooimg_03.png"></div><p class="title">车站商服</p>
+					    <div class=""><img src="./images/tss/ooimg_03.png"></div><p class="title">车站商服</p>
 					  </a>
 					</div>
 					<div class="width-1-3">
-					<a href="tss_10.html" class="image-wrapper" > <div class="waik"><img src="./images/tss/ooimg_06.png"></div><p>大连火车头体育场</p> </a>
+					<a href="tss_10.html" class="image-wrapper" > <div class=""><img src="./images/tss/ooimg_06.png"></div><p>大连火车头体育场</p> </a>
 					</div>
 					<div class="width-1-3">
-					<a href="tss_11.html" class="image-wrapper" ><div class="waik"> <img src="./images/tss/ooimg_09.png"></div><p>出租车公司 </p></a>
+					<a href="tss_11.html" class="image-wrapper" ><div class=""> <img src="./images/tss/ooimg_09.png"></div><p>出租车公司 </p></a>
 					</div>
 
 				</div>
 				<div class="flex-box half-height" style="width: 600px; margin: auto;">
 
  					<div class="width-1-2">
-					<a href="tss_12.html" class="image-wrapper" > <div class="waik"><img src="./images/tss/ooimg_15.png"></div><p>资产运营 </p></a>
+					<a href="tss_12.html" class="image-wrapper" > <div class=""><img src="./images/tss/ooimg_15.png"></div><p>资产运营 </p></a>
 					</div>
 					<div class="width-1-2">
-					<a href="tss_13.html" class="image-wrapper" > <div class="waik"><img src="./images/tss/ooimg_18.png"></div><p>旅顺龙头生态种植养殖基地</p> </a>
+					<a href="tss_13.html" class="image-wrapper" > <div class=""><img src="./images/tss/ooimg_18.png"></div><p>旅顺龙头生态种植养殖基地</p> </a>
 					</div>
 
 				</div>
 
  			</div>
- 			<!--  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
- 弹出视频 </button>
-
-           <button type="button" class="btn btn-primary btn-lg" >
-
- 播放音频 </button>
-			<audio src="Audios/sample.mp3" >您的浏览器不支持 audio 标签。</audio> -->
-
-
-
-    </div>
+ 		</div>
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
   	  <div class="container">
   		<div class="row" >
