--- a/1_profile.html
+++ b/1_profile.html
@@ -36,10 +36,11 @@
             </div>
 
             <div class=" bodypart">
-              <p>
-                大连铁越集团成立于2005年，是沈阳铁路局下属的跨行业、多领域、区域性集团公司。集团注册资金1.3亿元，资产总额60多亿元，下属17个分子公司，是中国铁路第一家A股上市公司“铁龙物流”的第二大股东。集团通过了国家ISO9001-2000质量体系认证, 是中国物流与采购联合会“AAAA级”综合型物流企业、中物联冷链副理事长单位、大连市物流协会副会长单位、辽宁省“现代物流示范企业”、辽宁省“文明单位”。
-                <a href="images/profile/i1.jpg" data-lightbox="lightbox" ><img src="./images/gkimg_21.png" class="wzimg"> </a>
+              <p class="desc typing-ani">
+                <span class="text">大连铁越集团成立于2005年，是沈阳铁路局下属的跨行业、多领域、区域性集团公司。集团注册资金1.3亿元，资产总额60多亿元，下属17个分子公司，是中国铁路第一家A股上市公司“铁龙物流”的第二大股东。集团通过了国家ISO9001-2000质量体系认证, 是中国物流与采购联合会“AAAA级”综合型物流企业、中物联冷链副理事长单位、大连市物流协会副会长单位、辽宁省“现代物流示范企业”、辽宁省“文明单位”。
+                </span>
               </p>
+              <a href="images/profile/i1.jpg" data-lightbox="lightbox" ><img src="./images/gkimg_21.png" class="wzimg"> </a>
 
             </div>
 
@@ -47,18 +48,18 @@
 
           <div class="col-md-9 rightpart" >
 
-            <div class="div7">
+            <div id="image_list" class="div7">
               <div class="titlepart" style="width:30%;margin-left:1%">
                 <h3>集团资质</h3>
                 <img src="./images/tiao_03.png" >
               </div>
-              <div>
+              <div >
                 <a href="images/profile/c1.jpg" data-lightbox="lightbox" > <img src="./images/profile/c1_s.png" class="imgdd"> </a>
                 <a href="images/profile/c3.jpg" data-lightbox="lightbox" ><img src="./images/profile/c3_s.png" class="imgdd"> </a>
                 <a href="images/profile/c4.jpg" data-lightbox="lightbox" ><img src="./images/profile/c4_s.png" class="imgdd"> </a>
                 <a href="images/profile/c2.jpg" data-lightbox="lightbox" ><img src="./images/profile/c2_s.png" class="imgdd"> </a>
               </div>
-              <div style="width:88%;height:1px;background:#fff;margin:30px  0 0 9px;"></div>
+              <div style="width:88%;height:1px;background:#fff;margin:30px 0 30px 9px;"></div>
               <div class="titlepart" style="width:45%;margin-left:0%;position: relative;height:55px">
                 <h3>集团荣誉</h3>
                 <img src="./images/tiao_03.png" >
@@ -93,16 +94,16 @@
 
           <div class="col-md-9 rightpart" >
             <div class="pull-right">
-              <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+              <a class="back-btn ctl_btn" href="index.html"> 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-              <a class="play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-off" aria-hidden="true"></span> </a>
+              <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
               <audio id="audio-js" autoplay="true" class="audio-js">
                 <source src="audios/profile.ogg" type="audio/ogg" />
-                </audio>
-              </div>
+              </audio>
             </div>
           </div>
-        </nav>
+        </div>
+      </nav>
 
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -121,13 +122,14 @@
         </div>
 
       </div>
-      <script src="Scripts/jquery-1.9.1.min.js"></script>
-      <script src="Scripts/bootstrap.min.js"></script>
-      <script src="Scripts/jquery.jplayer.min.js"></script>
-      <script src="Scripts/swiper.jquery.min.js"></script>
-      <script src="Scripts/swiper.animate.min.js"></script>
-      <script src="Scripts/video.min.js"></script>
-      <script src="Scripts/lightbox.min.js"></script>
-      <script src="Scripts/app.js"></script>
+      <script src="scripts/jquery-1.9.1.min.js"></script>
+      <script src="scripts/bootstrap.min.js"></script>
+      <script src="scripts/jquery.jplayer.min.js"></script>
+      <script src="scripts/swiper.jquery.min.js"></script>
+      <script src="scripts/swiper.animate.min.js"></script>
+      <script src="scripts/video.js"></script>
+      <script src="scripts/lightbox.min.js"></script>
+      <script src="scripts/typing-animate.js"></script>
+      <script src="scripts/app.js"></script>
     </body>
     </html>
