--- a/1_culture.html
+++ b/1_culture.html
@@ -28,7 +28,7 @@
 
         <div class="row" id="fenlei">
             <div class="col-md-3">
-              <a href="culture_2.html" class="business_btn1">  </a>
+              <a href="1_1_culture.html" class="business_btn1">  </a>
             </div>
             <div class="col-md-3">
               <a href="culture_3.html" class="culture_btn1">  </a>
@@ -37,7 +37,7 @@
               <a href="culture_4.html" class="party_btn1"> </a>
             </div>
           <div class="col-md-3">
-            <a href="culture_1.html" class="profile_btn1 ">  </a>
+            <a href="culture_5.html" class="profile_btn1 ">  </a>
           </div>
         </div>
 
@@ -58,10 +58,10 @@
   </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
-  <script src="scripts/jquery.jplayer.min.js"></script>
+
   <script src="scripts/swiper.jquery.min.js"></script>
   <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.min.js"></script>
+  <script src="scripts/video.js"></script>
   <script src="scripts/lightbox.min.js"></script>
   <script src="scripts/typing-animate.js"></script>
   <script src="scripts/app.js"></script>
