--- a/culture_2.html
+++ b/culture_2.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>大连城市物流共同配送中心</title>
+  <title>集团徽志-铁越集团</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
+
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -42,7 +42,7 @@
 第三层含义，用这条动感的弧线将铁越连接成闭环，蕴含铁越人要构建集团核心产业物流链体系，并通过实现闭环管理，助推集团公司创新发展。
 第四层含义，字母i（integrity诚实）上一点黄色标志，形象予人，宣示了铁越人以人为本、诚实诚信的优秀品质。
 
-               
+
               </p>
 
             </div>
@@ -100,10 +100,10 @@
       </div>
       <script src="Scripts/jquery-1.9.1.min.js"></script>
       <script src="Scripts/bootstrap.min.js"></script>
-      <script src="Scripts/jquery.jplayer.min.js"></script>
+
       <script src="Scripts/swiper.jquery.min.js"></script>
       <script src="Scripts/swiper.animate.min.js"></script>
-      <script src="Scripts/video.min.js"></script>
+      <script src="Scripts/video.js"></script>
       <script src="Scripts/lightbox.min.js"></script>
       <script src="Scripts/app.js"></script>
     </body>
