--- a/profile_1.html
+++ b/profile_1.html
@@ -11,7 +11,7 @@
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
+  
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -77,10 +77,10 @@
     </div>
     <script src="Scripts/jquery-1.9.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/jquery.jplayer.min.js"></script>
+    
     <script src="Scripts/swiper.jquery.min.js"></script>
     <script src="Scripts/swiper.animate.min.js"></script>
-    <script src="Scripts/video.min.js"></script>
+    <script src="Scripts/video.js"></script>
     <script src="Scripts/lightbox.min.js"></script>
     <script src="Scripts/app.js"></script>
   </body>
