--- a/tss_2.html
+++ b/tss_2.html
@@ -11,7 +11,7 @@
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
+  
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -113,10 +113,10 @@
   </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
-  <script src="scripts/jquery.jplayer.min.js"></script>
+  
   <script src="scripts/swiper.jquery.min.js"></script>
   <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.min.js"></script>
+  <script src="scripts/video.js"></script>
   <script src="scripts/lightbox.min.js"></script>
   <script src="scripts/typing-animate.js"></script>
   <script src="scripts/app.js"></script>
