--- a/1_1_tss.html
+++ b/1_1_tss.html
@@ -8,7 +8,7 @@
     <title>CefSharp Example Start Page</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-    <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
+    
     <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -76,10 +76,10 @@
 </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
-  <script src="scripts/jquery.jplayer.min.js"></script>
+  
   <script src="scripts/swiper.jquery.min.js"></script>
   <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.min.js"></script>
+  <script src="scripts/video.js"></script>
   <script src="scripts/lightbox.min.js"></script>
   <script src="scripts/typing-animate.js"></script>
   <script src="scripts/app.js"></script>
