--- a/1_1_tss1.html
+++ b/1_1_tss1.html
@@ -8,7 +8,7 @@
   <title>酒店疗养-铁越服务</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
+  
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -74,8 +74,8 @@
   </div>
   <script src="Scripts/jquery-1.9.1.min.js"></script>
   <script src="Scripts/bootstrap.min.js"></script>
-  <script src="Scripts/jquery.jplayer.min.js"></script>
-  <script src="Scripts/video.min.js"></script>
+
+  <script src="Scripts/video.js"></script>
   <script src="Scripts/app.js"></script>
 </body>
 </html>
