--- a/culture_1.html
+++ b/culture_1.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>大连城市物流共同配送中心</title>
+  <title>集团旗帜-铁越集团</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
+
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -89,10 +89,10 @@
     </div>
     <script src="Scripts/jquery-1.9.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/jquery.jplayer.min.js"></script>
+
     <script src="Scripts/swiper.jquery.min.js"></script>
     <script src="Scripts/swiper.animate.min.js"></script>
-    <script src="Scripts/video.min.js"></script>
+    <script src="Scripts/video.js"></script>
     <script src="Scripts/lightbox.min.js"></script>
     <script src="Scripts/app.js"></script>
   </body>
