--- a/culture_5.html
+++ b/culture_5.html
@@ -8,7 +8,7 @@
     <title>CefSharp Example Start Page</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-    
+
     <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -22,39 +22,30 @@
 			<div class="logo"> <img src="./images/tdc_logo.png"> </div>
 			<div class="row" id="zlogo">
 				<div class="col-md-4"></div>
-				<div class="col-md-4"><img src="./images/tdc_head.png"></div>
+				<div class="col-md-4"><img src="./images/party/party1_02.png"></div>
 				<div class="col-md-4"></div>
 			</div>
 		</div>
-        <div class="main">
- 			<div class="main-content  ">
-				<div class="half-height" style="width: 1200px;  margin: auto;">
-					<div class="width-1-3">
-					  <a class="image-wrapper" href="tdc_1.html">
-					    <div class=""><img src="./images/tdc/tdc_i1.jpg"></div><p class="title">大连城市物流共同配送中心</p>
-					  </a>
-					</div>
-					<div class="width-1-3">
-					<a href="tdc_3.html" class="image-wrapper " > <div class=""><img src="./images/tdc/tdc_i2.jpg"></div><p>沙河口城市配送中心</p> </a>
-					</div>
-					<div class="width-1-3">
-					<a href="tdc_4.html" class="image-wrapper" ><div class=""> <img src="./images/tdc/tdc_i3.jpg"></div><p>金桥物流基地 </p></a>
-					</div>
-				</div>
-				<div class="half-height" style="width: 1200px;  margin: auto;">
 
- 					<div class="width-1-3">
-					<a href="tdc_5.html" class="image-wrapper" > <div class=""><img src="./images/tdc/tdc_i4.jpg"></div><p>金桥北汽配园区 </p></a>
-					</div>
-					<div class="width-1-3">
-					<a href="tdc_6.html" class="image-wrapper" > <div class=""><img src="./images/tdc/tdc_i5.jpg"></div><p>周水子钢材市场</p> </a>
-					</div>
-					<div class="width-1-3">
-					<a href="tdc_7.html" class="image-wrapper" > <div class=""><img src="./images/tdc/tdc_i6.jpg"></div><p>革镇堡木材市场 </p></a>
-					</div>
-				</div>
+    <div class="container">
+        <div class="row" id="fenlei">
+          <div class="col-md-3">
+            <a href="#" class="profile_btn2">  </a>
+          </div>
 
- 			</div>
+            <div class="col-md-3">
+              <a href="#" class="business_btn2">  </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#" class="culture_btn2">  </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#" class="party_btn2"> </a>
+            </div>
+        </div>
+    </div>
+
+
 
     </div>
 
@@ -76,7 +67,7 @@
 </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
-  
+
   <script src="scripts/swiper.jquery.min.js"></script>
   <script src="scripts/swiper.animate.min.js"></script>
   <script src="scripts/video.js"></script>
