--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
   </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
-  <script src="scripts/jquery.jplayer.min.js"></script>
+  
   <script src="scripts/swiper.jquery.min.js"></script>
   <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.min.js"></script>
+  <script src="scripts/video.js"></script>
   <script src="scripts/lightbox.min.js"></script>
   <script src="scripts/typing-animate.js"></script>
   <script src="scripts/app.js"></script>
