--- a/splash.html
+++ b/splash.html
@@ -20,7 +20,7 @@
   </div>
 	<script src="Scripts/jquery-1.9.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/video.min.js"></script>
+    <script src="Scripts/video.js"></script>
     <script src="Scripts/app.js"></script>
 </body>
 </html>
