修正集团文化页面

--- a/culture_1.html
+++ b/culture_1.html
@@ -61,7 +61,7 @@
             <div class="pull-right">
               <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-              <a class="play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-off" aria-hidden="true"></span> </a>
+              <a class="play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
               <audio id="audio-js" autoplay="true" class="audio-js">
                 <source src="audios/profile.ogg" type="audio/ogg" />
               </audio>
