修正视频和音频文件

--- a/culture_3.html
+++ b/culture_3.html
@@ -141,7 +141,7 @@
               <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
               <a class="play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-              <audio id="audio-js" autoplay="true" class="audio-js">
+              <audio id="audio-js"  class="audio-js">
                 <source src="audios/profile.ogg" type="audio/ogg" />
               </audio>
             </div>
@@ -150,20 +150,10 @@
       </nav>
 
       <!-- Modal -->
-      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="clearfix">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
-            </div>
-            <div class="modal-body">
-              <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-                <source src="videos/profile.webm" type="video/webm"/>
-              </video>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!-- Modal -->
+      <video class="video-js vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+        <source src="videos/sample.webm" type="video/webm"/>
+      </video>
 
     </div>
     <script src="Scripts/jquery-1.9.1.min.js"></script>
