--- a/1_profile.html
+++ b/1_profile.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>大连城市物流共同配送中心</title>
+  <title>集团简介-铁越物流</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -95,7 +95,7 @@
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
               <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
               <audio id="audio-js" autoplay="true" class="audio-js">
-                <source src="audios/profile.ogg" type="audio/ogg" />
+                <source src="audios/铁越集团.ogg" type="audio/ogg" />
               </audio>
             </div>
           </div>
@@ -103,20 +103,9 @@
       </nav>
 
         <!-- Modal -->
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="clearfix">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
-              </div>
-              <div class="modal-body">
-                <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-                  <source src="videos/profile.webm" type="video/webm"/>
-                </video>
-              </div>
-            </div>
-          </div>
-        </div>
+        <video class="video-js vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+          <source src="videos/集团简介.webm" type="video/webm"/>
+        </video>
 
       </div>
       <script src="scripts/jquery-1.9.1.min.js"></script>
