--- a/tss_13.html
+++ b/tss_13.html
@@ -11,7 +11,7 @@
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-  
+
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -113,27 +113,14 @@
         </div>
       </div>
     </nav>
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="clearfix">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
-          </div>
-          <div class="modal-body">
-            <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-              <source src="videos/sample.mp4" type="video/mp4"/>
-              <source src="videos/sample.webm" type="video/webm"/>
-            </video>
-          </div>
-        </div>
-      </div>
-    </div>
 
+    <video class="video-js vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+      <source src="videos/龙头生态园.webm" type="video/webm"/>
+    </video>
   </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
-  
+
   <script src="scripts/swiper.jquery.min.js"></script>
   <script src="scripts/swiper.animate.min.js"></script>
   <script src="scripts/video.js"></script>
