删除 audio autoplay=true,根据url参数控制播放

--- a/try_2.html
+++ b/try_2.html
@@ -82,7 +82,7 @@
             <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js" autoplay="true" class="audio-js">
+            <audio id="audio-js"  class="audio-js">
               <source src="audios/try2.ogg" type="audio/ogg" />
             </audio>
           </div>
