--- a/1_profile.html
+++ b/1_profile.html
@@ -13,6 +13,9 @@
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
 
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+  <script>
+    window.HELP_IMPROVE_VIDEOJS = false;
+  </script>
 </head>
 <body>
   <div class="page  tdc-detail">
@@ -94,7 +97,7 @@
               <a class="back-btn ctl_btn" href="index.html"> 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
               <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-              <audio id="audio-js" autoplay="true" class="audio-js">
+              <audio id="audio-js"  class="audio-js">
                 <source src="audios/铁越集团.ogg" type="audio/ogg" />
               </audio>
             </div>
@@ -113,7 +116,7 @@
 
       <script src="scripts/swiper.jquery.min.js"></script>
       <script src="scripts/swiper.animate.min.js"></script>
-      <script src="scripts/video.js"></script>
+      <script src="scripts/video.min.js"></script>
       <script src="scripts/lightbox.min.js"></script>
       <script src="scripts/typing-animate.js"></script>
       <script src="scripts/app.js"></script>
