--- a/culture_4.html
+++ b/culture_4.html
@@ -58,7 +58,7 @@
               <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
               <a class="play-tieyue-song-btn play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-              <audio id="audio-js" autoplay="true" class="audio-js">
+              <audio id="audio-js"  class="audio-js">
                 <source src="audios/追逐梦想.ogg" type="audio/ogg" />
               </audio>
             </div>
