--- a/tdc_3.html
+++ b/tdc_3.html
@@ -100,7 +100,7 @@
                     <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
                     <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
                             class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-                    <audio id="audio-js" autoplay="true" class="audio-js">
+                    <audio id="audio-js"  class="audio-js">
                         <source src="audios/tdc3.ogg" type="audio/ogg"/>
                     </audio>
                 </div>
