--- a/tdc_7.html
+++ b/tdc_7.html
@@ -84,7 +84,7 @@
             <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js" autoplay="true" class="audio-js">
+            <audio id="audio-js"  class="audio-js">
               <source src="audios/革镇堡.ogg" type="audio/ogg" />
             </audio>
           </div>
