--- a/tss_4.html
+++ b/tss_4.html
@@ -134,7 +134,7 @@
                     <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
                     <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
                             class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-                    <audio id="audio-js" autoplay="true" class="audio-js">
+                    <audio id="audio-js"  class="audio-js">
                         <source src="audios/male/tdc_1.mp3" type="audio/mpeg"/>
                     </audio>
                 </div>
