添加企业文化音频

--- a/culture_1.html
+++ b/culture_1.html
@@ -35,12 +35,14 @@
               <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
             </div>
 
-            <div class=" bodypart">
-              <p>
-                浅蓝色旗帜，中心印制“大连铁越集团”黄色字。浅蓝色旗帜颜色，代表大连铁越集团地处辽宁沿海改革开放地区。蓝色代表海洋，寓意大连铁越集团：
-                ——员工胸怀似海洋宽阔、浩瀚包容；
-                ——企业发展将海纳百川、搏击前行。
+            <div id="image_list" class=" bodypart">
+              <p class="desc ">
+                <span class="text">浅蓝色旗帜，中心印制“大连铁越集团”黄色字。浅蓝色旗帜颜色，代表大连铁越集团地处辽宁沿海改革开放地区。蓝色代表海洋，寓意大连铁越集团：
+                <br/>——员工胸怀似海洋宽阔、浩瀚包容；
+                <br/>——企业发展将海纳百川、搏击前行。
+                </span>
               </p>
+
             </div>
           </div>
           <div class="col-md-9 rightt" >
@@ -62,8 +64,8 @@
               <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
               <a class="play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-              <audio id="audio-js"  class="audio-js">
-                <source src="audios/profile.ogg" type="audio/ogg" />
+              <audio id="audio-js" autoplay="true"  class="audio-js">
+                <source src="audios/culture/2集团旗帜.ogg" type="audio/ogg" />
               </audio>
             </div>
           </div>
@@ -76,11 +78,11 @@
     </div>
     <script src="Scripts/jquery-1.9.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
-
     <script src="Scripts/swiper.jquery.min.js"></script>
     <script src="Scripts/swiper.animate.min.js"></script>
     <script src="Scripts/video.js"></script>
     <script src="Scripts/lightbox.min.js"></script>
+    <script src="scripts/typing-animate.js"></script>
     <script src="Scripts/app.js"></script>
   </body>
   </html>
