--- a/culture_2.html
+++ b/culture_2.html
@@ -35,26 +35,21 @@
               <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
             </div>
 
-            <div class=" bodypart">
-              <p>
-                集团公司徽志第一层含义，用“铁越”汉语拼音“TIEYUE”和“铁越集团”文字并列构成；
-第二层含义，把“TIEYUE”中的双E（Express快运、Exceed超越）加以象征铁路动车及轨道的弧线连接构成，蕴育着提升铁越和谐发展速度；
-第三层含义，用这条动感的弧线将铁越连接成闭环，蕴含铁越人要构建集团核心产业物流链体系，并通过实现闭环管理，助推集团公司创新发展。
-第四层含义，字母i（integrity诚实）上一点黄色标志，形象予人，宣示了铁越人以人为本、诚实诚信的优秀品质。
+            <div  id="image_list" class=" bodypart">
+              <p class="desc typing-ani">
+                <span class="text">  集团公司徽志第一层含义，用“铁越”汉语拼音“TIEYUE”和“铁越集团”文字并列构成；
+  第二层含义，把“TIEYUE”中的双E（Express快运、Exceed超越）加以象征铁路动车及轨道的弧线连接构成，蕴育着提升铁越和谐发展速度；
+  第三层含义，用这条动感的弧线将铁越连接成闭环，蕴含铁越人要构建集团核心产业物流链体系，并通过实现闭环管理，助推集团公司创新发展。
+  第四层含义，字母i（integrity诚实）上一点黄色标志，形象予人，宣示了铁越人以人为本、诚实诚信的优秀品质。
 
-
+                </span>
               </p>
-
             </div>
 
           </div>
 
           <div class="col-md-9 rightt" >
-
-
             <img src="./images/culture/biaozhiimg_06.png">
-
-
 
           </div>
         </div>
@@ -73,8 +68,8 @@
               <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
               <a class="play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-              <audio id="audio-js"  class="audio-js">
-                <source src="audios/profile.ogg" type="audio/ogg" />
+              <audio id="audio-js" autoplay="true"  class="audio-js">
+                <source src="audios/culture/1企业标识.ogg" type="audio/ogg" />
                 </audio>
               </div>
             </div>
@@ -89,11 +84,11 @@
       </div>
       <script src="Scripts/jquery-1.9.1.min.js"></script>
       <script src="Scripts/bootstrap.min.js"></script>
-
       <script src="Scripts/swiper.jquery.min.js"></script>
       <script src="Scripts/swiper.animate.min.js"></script>
       <script src="Scripts/video.js"></script>
       <script src="Scripts/lightbox.min.js"></script>
+      <script src="scripts/typing-animate.js"></script>
       <script src="Scripts/app.js"></script>
     </body>
     </html>
