--- a/culture_3.html
+++ b/culture_3.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>大连城市物流共同配送中心</title>
+  <title>文化体系-大连铁越</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -32,7 +32,8 @@
           <div class="col-md-12 leftpart">
             <ul class="leftpartqq polaroids clearfix">
               <li>
-                <div>
+                <a href="#modal-1" data-toggle="modal" >
+
                   <div class="titlepart1">
                     <h3>企业愿景</h3>
                   </div>
@@ -42,10 +43,10 @@
                       企业愿景既企业的发展目标和发展定位。一流代表着企业的发展目标，现代代表着企业的发展定位。集团公司的未来就是要依托行业优势、立足区域经济特点，创建铁路一流现代物流企业。
                     </p>
                   </div>
-                </div>
+                </a>
               </li>
               <li>
-                <div>
+                <a href="#modal-2" data-toggle="modal" >
                   <div class="titlepart1">
                     <h3>企业精神</h3>
                   </div>
@@ -55,10 +56,10 @@
                       企业愿景既企业的发展目标和发展定位。一流代表着企业的发展目标，现代代表着企业的发展定位。集团公司的未来就是要依托行业优势、立足区域经济特点，创建铁路一流现代物流企业。
                     </p>
                   </div>
-                </div>
+                </a>
               </li>
             <li>
-              <div>
+              <a href="#modal-3" data-toggle="modal" >
                 <div class="titlepart1">
                   <h3>核心价值观</h3>
 
@@ -69,10 +70,10 @@
                     企业核心价值观是企业及其员工的价值取向，是企业在追求经营成功过程中所推崇的基本信念和奉行的目标。“言必信，行必果”是中华民族的传统美德，集团公司作为现代物流企业，必须坚持诚实守信，铸就企业灵魂，进而增强企业的凝聚力、竞争力、扩张力，实现取信市场、满足客户、服务社会的目标。
                   </p>
                 </div>
-              </div>
+              </a>
             </li>
             <li>
-              <div>
+              <a href="#modal-4" data-toggle="modal" >
                 <div class="titlepart1">
                   <h3>员工形象</h3>
                 </div>
@@ -82,10 +83,10 @@
                     企业员工形象既企业员工的整体素质和企业精神风貌的综合体现。爱岗敬业就是热爱岗位、忠于职守，文明谦和就是素养高尚、谦虚和善。集团公司引导培养员工树立并逐步形成爱岗敬业、文明谦和的企业员工形象。
                   </p>
                 </div>
-              </div>
+              </a>
             </li>
             <li>
-              <div>
+              <a href="#modal-5" data-toggle="modal" >
                 <div class="titlepart1">
                   <h3>安全理念</h3>
 
@@ -96,10 +97,10 @@
                     企业安全理念既企业员工对安全与健康的共同追求，是企业的发展价值与员工的生命价值的和谐统一，是企业安全文化核心“责任、素质、觉悟、人品和忠诚”的具体体现。集团公司全体员工要坚持安全风险管理，将确保安全为己任，用百分努力换来“安全第一”，脚踏实地落实安全风险控制和预防工作，从自身做起，自觉遵章守纪，严格自律，养成良好习惯，化解安全风险中的“人祸”因素，保持集团公司安全稳定，促进集团公司可持续发展
                   </p>
                 </div>
-              </div>
+              </a>
             </li>
             <li>
-              <div>
+              <a href="#modal-6" data-toggle="modal" >
                 <div class="titlepart1">
                   <h3>经营理念</h3>
                 </div>
@@ -109,10 +110,10 @@
                     企业经营理念既企业基本的经营发展方向和追求的目标。实业是企业稳定的财富根基，精品是企业发展的实力品牌，只有不断的改革创新、开拓进取，才能使企业立于不败之地。集团公司根据自身经营模式特点，确定要做实做优物流产业、做强做大酒店疗养产业、做精做细服务产业，实现“争一流、站排头”目标。
                   </p>
                 </div>
-              </div>
+              </a>
             </li>
             <li>
-              <div>
+              <a href="#modal-7" data-toggle="modal" >
                 <div class="titlepart1">
                   <h3>服务理念</h3>
                 </div>
@@ -122,7 +123,7 @@
                     企业服务理念既企业提供的各项服务要能满足不同的客户需求的工作要求。从目标市场定位开始，落实服务工作标准并取得客户认可。全方位代表着企业的服务广度和深度，全过程代表着企业的服务流程中要做好每一个细节。集团公司教育引导员工，立足岗位，尽心竭力，将岗位服务标准细化到承担的服务工作的链条之中。
                   </p>
                 </div>
-              </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -140,25 +141,166 @@
             <div class="pull-right">
               <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-              <a class="play-audio-btn audio-off ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-              <audio id="audio-js"  class="audio-js">
-                <source src="audios/profile.ogg" type="audio/ogg" />
-              </audio>
             </div>
           </div>
         </div>
       </nav>
 
       <!-- Modal -->
-      <!-- Modal -->
       <video class="video-js vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
         <source src="videos/sample.webm" type="video/webm"/>
       </video>
 
+      <div  id="modal-1" class="modal fade culture" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+               <h4 class="modal-title">企业愿景</h4>
+            <div class="modal-body">
+              <h3>融入区域经济，发挥行业优势，创建铁路一流现代物流企业 </h3>
+              <p>企业愿景既企业的发展目标和发展定位。一流代表着企业的发展目标，现代代表着企业的发展定位。集团公司的未来就是要依托行业优势、立足区域经济特点，创建铁路一流现代物流企业。</p>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              <button type="button" class="play-inner-audio-btn play-audio-btn btn btn-primary"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+                <audio  preload="true"  class="audio-js">
+                  <source src="audios/culture/3企业愿景.ogg" type="audio/ogg" />
+                </audio>
+              </button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
+      <div  id="modal-2" class="modal fade culture" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+               <h4 class="modal-title">企业精神</h4>
+            <div class="modal-body">
+              <h3>融入区域经济，发挥行业优势，创建铁路一流现代物流企业 </h3>
+              <p>企业愿景既企业的发展目标和发展定位。一流代表着企业的发展目标，现代代表着企业的发展定位。集团公司的未来就是要依托行业优势、立足区域经济特点，创建铁路一流现代物流企业。</p>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              <button type="button" class="play-inner-audio-btn play-audio-btn btn btn-primary"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+                <audio preload="true"   class="audio-js">
+                  <source src="audios/culture/4企业精神.ogg" type="audio/ogg" />
+                </audio>
+              </button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
+      <div  id="modal-3" class="modal fade culture" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+               <h4 class="modal-title">核心价值观</h4>
+            <div class="modal-body">
+              <h3>融入区域经济，发挥行业优势，创建铁路一流现代物流企业 </h3>
+              <p>企业愿景既企业的发展目标和发展定位。一流代表着企业的发展目标，现代代表着企业的发展定位。集团公司的未来就是要依托行业优势、立足区域经济特点，创建铁路一流现代物流企业。</p>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              <button type="button" class="play-inner-audio-btn play-audio-btn btn btn-primary"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+                <audio preload="true"   class="audio-js">
+                  <source src="audios/culture/5企业核心价值观.ogg" type="audio/ogg" />
+                </audio>
+              </button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
+      <div  id="modal-4" class="modal fade culture" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+               <h4 class="modal-title">员工形象</h4>
+            <div class="modal-body">
+              <h3>融入区域经济，发挥行业优势，创建铁路一流现代物流企业 </h3>
+              <p>企业愿景既企业的发展目标和发展定位。一流代表着企业的发展目标，现代代表着企业的发展定位。集团公司的未来就是要依托行业优势、立足区域经济特点，创建铁路一流现代物流企业。</p>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              <button type="button" class="play-inner-audio-btn play-audio-btn btn btn-primary"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+                <audio  preload="true"  class="audio-js">
+                  <source src="audios/culture/6企业员工形象.ogg" type="audio/ogg" />
+                </audio>
+              </button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
+      <div  id="modal-5" class="modal fade culture" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+               <h4 class="modal-title">安全理念</h4>
+            <div class="modal-body">
+              <h3>融入区域经济，发挥行业优势，创建铁路一流现代物流企业 </h3>
+              <p>企业愿景既企业的发展目标和发展定位。一流代表着企业的发展目标，现代代表着企业的发展定位。集团公司的未来就是要依托行业优势、立足区域经济特点，创建铁路一流现代物流企业。</p>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              <button type="button" class="play-inner-audio-btn play-audio-btn btn btn-primary"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+                <audio preload="true"   class="audio-js">
+                  <source src="audios/culture/7企业安全理念.ogg" type="audio/ogg" />
+                </audio>
+              </button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
+      <div  id="modal-6" class="modal fade culture" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+               <h4 class="modal-title">经营理念</h4>
+            <div class="modal-body">
+              <h3>融入区域经济，发挥行业优势，创建铁路一流现代物流企业 </h3>
+              <p>企业愿景既企业的发展目标和发展定位。一流代表着企业的发展目标，现代代表着企业的发展定位。集团公司的未来就是要依托行业优势、立足区域经济特点，创建铁路一流现代物流企业。</p>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              <button type="button" class="play-inner-audio-btn play-audio-btn btn btn-primary"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+                <audio preload="true"   class="audio-js">
+                  <source src="audios/culture/8企业经营理念.ogg" type="audio/ogg" />
+                </audio>
+              </button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
+      <div  id="modal-7" class="modal fade culture" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+               <h4 class="modal-title">服务理念</h4>
+            <div class="modal-body">
+              <h3>融入区域经济，发挥行业优势，创建铁路一流现代物流企业 </h3>
+              <p>企业愿景既企业的发展目标和发展定位。一流代表着企业的发展目标，现代代表着企业的发展定位。集团公司的未来就是要依托行业优势、立足区域经济特点，创建铁路一流现代物流企业。</p>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              <button type="button" class="play-inner-audio-btn play-audio-btn btn btn-primary"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+                <audio  preload="true"  class="audio-js">
+                  <source src="audios/culture/9企业服务理念.ogg" type="audio/ogg" />
+                </audio>
+              </button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
     </div>
     <script src="Scripts/jquery-1.9.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
-
     <script src="Scripts/swiper.jquery.min.js"></script>
     <script src="Scripts/swiper.animate.min.js"></script>
     <script src="Scripts/video.js"></script>
