--- a/tss_5.html
+++ b/tss_5.html
@@ -102,6 +102,12 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">	<img src="images/tss5/i1.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tss5/i2.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/i3.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/i5.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/i7.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/i8.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tss5/i1.jpg">	</div>
                 </div>
               </div>
