--- a/tdc_1.html
+++ b/tdc_1.html
@@ -82,6 +82,12 @@
                   <div class="swiper-slide">	<img src="images/tdc1/i4.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i5.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i7.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i8.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i9.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i10.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i11.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i1.jpg">	</div>                  
                 </div>
               </div>
             </div>
