--- a/tdc_4.html
+++ b/tdc_4.html
@@ -58,9 +58,15 @@
 
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
+                  <div class="swiper-slide">	<img src="images/tdc4/i7.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc4/i1.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc4/i2.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc4/i3.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc4/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc4/i5.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc4/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc4/i8.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc4/i1.jpg">	</div>
                 </div>
               </div>
 
