--- a/tss_8.html
+++ b/tss_8.html
@@ -118,10 +118,18 @@
                         </div>
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide"><img src="images/tss8/img7_03.png"></div>
-                                <div class="swiper-slide"><img src="images/tss8/img7_05.png"></div>
-                                <div class="swiper-slide"><img src="images/tss8/img7_10.png"></div>
-                                <div class="swiper-slide"><img src="images/tss8/img7_13.png"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i1.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i2.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i3.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i4.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i5.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i6.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i7.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i8.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i9.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i10.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i11.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i1.jpg"></div>
                             </div>
                         </div>
                     </div>
