--- a/tss_9.html
+++ b/tss_9.html
@@ -48,32 +48,33 @@
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none; height:100%;">
                 <div class="col-1-2-left" style="">
-                    <a href="images/tss9/img9_03.png" data-lightbox="lightbox" ><img src="./images/tss9/img9_03.png" class="" style="width: 100%; height: 100%;"></a>
+                    <a href="images/tss9/i3.png" data-lightbox="lightbox" ><img src="./images/tss9/img9_03.png" class="" style="width: 100%; height: 100%;"></a>
                 </div>
 
                 <div class="col-1-2-right" style="">
                   <div class="lin-1-2-top" style="">
                     <div  class="" style="">
-                      <a href="images/tss9/img9_06.png" data-lightbox="lightbox" ><img src="./images/tss9/img9_06.png"class="" style="width: 100%;  height: 100%"></a>
+                      <a href="images/tss9/i6.png" data-lightbox="lightbox" ><img src="./images/tss9/img9_06.png"class="" style="width: 100%;  height: 100%"></a>
                     </div>
                   </div>
 
                   <div class="lin-1-2-foot" style="">
                     <div class="col-1-2-left" style="">
-                      <a href="images/tss9/img9_10.png" data-lightbox="lightbox" ><img src="./images/tss9/img9_10.png" class="" style="width: 100%;  height: 100%"></a>
+                      <a href="images/tss9/i10.png" data-lightbox="lightbox" ><img src="./images/tss9/img9_10.png" class="" style="width: 100%;  height: 100%"></a>
                     </div>
                     <div  class="col-1-2-right" style="">
-                      <a href="images/tss9/img9_12.png" data-lightbox="lightbox" ><img src="./images/tss9/img9_12.png" class="" style="width: 100%;  height: 100%"></a>
+                      <a href="images/tss9/i12.png" data-lightbox="lightbox" ><img src="./images/tss9/img9_12.png" class="" style="width: 100%;  height: 100%"></a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tss9/img9_03.png">	</div>
-                  <div class="swiper-slide">	<img src="images/tss9/img9_06.png">	</div>
-                  <div class="swiper-slide">	<img src="images/tss9/img9_10.png">	</div>
-                  <div class="swiper-slide">	<img src="images/tss9/img9_12.png">	</div>
+                  <div class="swiper-slide">	<img src="images/tss9/i3.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss9/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss9/i10.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss9/i12.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss9/i3.jpg">	</div>
                 </div>
 
               </div>
@@ -108,7 +109,7 @@
       </div>
     </nav>
 
- 
+
     </div>
     <script src="scripts/jquery-1.9.1.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
